--- a/src/main/resources/View/Staff.fxml
+++ b/src/main/resources/View/Staff.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.staffController">
+<AnchorPane prefHeight="982.0" prefWidth="1512.0" styleClass="main-background" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.staffController">
    <children>
       <AnchorPane layoutX="5.0" prefHeight="70.0" prefWidth="1512.0" styleClass="navbar">
          <children>
@@ -34,45 +34,25 @@
                </font>
             </Label>
             <Avatar fx:id="ava" accessibleRole="IMAGE_VIEW" layoutX="1413.0" layoutY="12.0" />
-            <Button fx:id="productBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="792.0" layoutY="2.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" styleClass="switch-btn" text="Product">
-               <font>
-                  <Font name="Inter ExtraBold" size="28.0" />
-               </font>
-            </Button>
-            <Button fx:id="staffBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="964.0" layoutY="2.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="110.0" styleClass="switch-btn" text="Staff">
-               <font>
-                  <Font name="Inter ExtraBold" size="28.0" />
-               </font>
-            </Button>
-            <Button fx:id="billBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="1111.0" layoutY="2.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="80.0" styleClass="switch-btn" text="Bill">
-               <font>
-                  <Font name="Inter ExtraBold" size="28.0" />
-               </font>
-            </Button>
             <Pane fx:id="switch_pane" layoutX="649.0" layoutY="47.0" prefHeight="6.0" prefWidth="119.0" style="-fx-background-radius: 10;" styleClass="switch-pane" />
-            <Button fx:id="homeBtn" alignment="CENTER" contentDisplay="CENTER" layoutX="648.0" layoutY="5.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="119.0" styleClass="switch-btn" text="Home">
-               <font>
-                  <Font name="Inter ExtraBold" size="28.0" />
-               </font>
-            </Button>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="AnchorPaneBillList" layoutY="70.0" prefHeight="912.0" prefWidth="1517.0">
          <children>
-            <Label layoutX="25.0" layoutY="15.0" text="BILL LIST">
+            <Label layoutX="25.0" layoutY="22.0" text="BILL LIST">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="961.0" endY="-7.62939453125E-6" layoutX="301.0" layoutY="37.0" startX="-100.0" />
-            <Button layoutX="1272.0" layoutY="15.0" mnemonicParsing="false" onAction="#clickBtnAdd" prefHeight="44.0" prefWidth="89.0" text="Add">
+            <Line endX="929.29052734375" endY="-7.62939453125E-6" layoutX="301.0" layoutY="47.0" startX="-100.0" strokeWidth="3.0" styleClass="line-color" />
+            <Button layoutX="1255.0" layoutY="16.0" mnemonicParsing="false" onAction="#clickBtnAdd" prefHeight="56.0" prefWidth="95.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Add">
                <font>
-                  <Font name="Inter Bold" size="18.0" />
+                  <Font name="Inter Bold" size="24.0" />
                </font>
             </Button>
-            <Button layoutX="1375.0" layoutY="15.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="103.0" text="Remove">
+            <Button layoutX="1369.0" layoutY="15.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="128.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" styleClass="main_btn" text="Remove">
                <font>
-                  <Font name="Inter Bold" size="18.0" />
+                  <Font name="Inter Bold" size="24.0" />
                </font>
             </Button>
             <TableView fx:id="billList_table" layoutX="25.0" layoutY="86.0" prefHeight="801.0" prefWidth="1452.0" />
@@ -91,38 +71,38 @@
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="55.0" layoutY="160.0" prefHeight="54.0" prefWidth="600.0" />
+            <TextField layoutX="45.0" layoutY="162.0" prefHeight="54.0" prefWidth="600.0" />
             <Label layoutX="745.0" layoutY="130.0" text="Name">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="750.0" layoutY="160.0" prefHeight="54.0" prefWidth="600.0" />
+            <TextField layoutX="742.0" layoutY="162.0" prefHeight="54.0" prefWidth="600.0" />
             <Label layoutX="50.0" layoutY="281.0" text="Phone Number">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="55.0" layoutY="310.0" prefHeight="54.0" prefWidth="600.0" />
+            <TextField layoutX="47.0" layoutY="315.0" prefHeight="54.0" prefWidth="600.0" />
             <Label layoutX="745.0" layoutY="281.0" text="Address">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="750.0" layoutY="310.0" prefHeight="54.0" prefWidth="600.0" />
+            <TextField layoutX="743.0" layoutY="313.0" prefHeight="54.0" prefWidth="600.0" />
             <Label layoutX="53.0" layoutY="431.0" text="Email">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="58.0" layoutY="460.0" prefHeight="54.0" prefWidth="600.0" />
+            <TextField layoutX="49.0" layoutY="467.0" prefHeight="54.0" prefWidth="600.0" />
             <Label layoutX="735.0" layoutY="431.0" text="Password">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="740.0" layoutY="460.0" prefHeight="54.0" prefWidth="600.0" />
-            <Button layoutX="1227.0" layoutY="472.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="87.0" text="Set">
+            <TextField layoutX="734.0" layoutY="466.0" prefHeight="54.0" prefWidth="600.0" />
+            <Button layoutX="1233.0" layoutY="480.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="87.0" text="Set">
                <font>
                   <Font name="Inter Bold" size="13.0" />
                </font>
@@ -174,18 +154,21 @@
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="1072.6666259765625" endY="-7.62939453125E-6" layoutX="358.0" layoutY="37.0" startX="-100.0" />
-            <Label layoutX="40.0" layoutY="110.0" text="Customer Name">
+            <Line endX="1072.6666259765625" endY="-7.62939453125E-6" layoutX="358.0" layoutY="37.0" startX="-100.0" strokeWidth="3.0" styleClass="line-color" />
+            <Label layoutX="45.0" layoutY="102.0" text="Customer Name">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font></Label>
-            <TextField fx:id="TextFieldCustomerName" layoutX="45.0" layoutY="140.0" prefHeight="60.0" prefWidth="1398.0" />
-            <Label layoutX="40.0" layoutY="230.0" text=" Date Of Birth">
+            <TextField fx:id="TextFieldCustomerName" layoutX="40.0" layoutY="140.0" prefHeight="69.0" prefWidth="1403.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
+               <font>
+                  <Font name="Inter Regular" size="24.0" />
+               </font></TextField>
+            <Label layoutX="40.0" layoutY="222.0" text=" Date Of Birth">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="770.0" layoutY="230.0" text="Gender">
+            <Label layoutX="786.0" layoutY="227.0" text="Gender">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
@@ -195,77 +178,90 @@
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="TextFieldPhoneNumber" layoutX="45.0" layoutY="380.0" prefHeight="60.0" prefWidth="1398.0" />
-            <Button fx:id="ButtonNext" layoutX="1323.0" layoutY="539.0" mnemonicParsing="false" onAction="#ClickButtonNext" prefHeight="54.0" prefWidth="119.0" text="Next">
+            <TextField fx:id="TextFieldPhoneNumber" layoutX="37.0" layoutY="391.0" prefHeight="74.0" prefWidth="1410.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd">
                <font>
-                  <Font name="Inter Bold" size="24.0" />
+                  <Font name="Inter Regular" size="24.0" />
+               </font></TextField>
+            <Button fx:id="ButtonNext" layoutX="1312.0" layoutY="539.0" mnemonicParsing="false" onAction="#ClickButtonNext" prefHeight="68.0" prefWidth="120.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" styleClass="main_btn" text="Next">
+               <font>
+                  <Font name="Inter Black" size="24.0" />
                </font>
             </Button>
-            <ComboBox fx:id="ComboBoxGender" layoutX="782.0" layoutY="260.0" prefHeight="54.0" prefWidth="346.0" />
-            <DatePicker fx:id="DatePickerDateOfBirth" layoutX="40.0" layoutY="257.0" prefHeight="60.0" prefWidth="551.0" />
+            <ComboBox fx:id="ComboBoxGender" layoutX="782.0" layoutY="260.0" prefHeight="66.0" prefWidth="662.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="spinner" />
+            <DatePicker fx:id="DatePickerDateOfBirth" layoutX="40.0" layoutY="257.0" prefHeight="69.0" prefWidth="670.0" styleClass="txtfd" />
+            <Button fx:id="ButtonBack" layoutX="47.0" layoutY="524.0" mnemonicParsing="false" onAction="#clickButtonBack" prefHeight="68.0" prefWidth="120.0" style="-fx-border-radius: 15; -fx-background-radius: 15;" styleClass="main_btn" text="Back">
+               <font>
+                  <Font name="Inter Black" size="24.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="70.0" prefHeight="912.0" prefWidth="1519.0" visible="false">
+      <AnchorPane fx:id="AnchorPaneBillInfor" layoutY="70.0" prefHeight="912.0" prefWidth="1519.0" visible="false">
          <children>
-            <Label layoutX="25.0" layoutY="15.0" text="CUSTOMER">
+            <Label layoutX="25.0" layoutY="15.0" text="BILL INFORMATION">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="1077.0" endY="-7.62939453125E-6" layoutX="357.0" layoutY="37.0" startX="-100.0" />
-            <Label layoutX="35.0" layoutY="80.0" text="Bill ID">
+            <Line endX="1077.0" endY="-7.62939453125E-6" layoutX="357.0" layoutY="37.0" startX="32.748016357421875" startY="-1.52587890625E-5" strokeWidth="3.0" styleClass="line-color" />
+            <Label layoutX="59.0" layoutY="80.0" text="Bill ID">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="40.0" layoutY="110.0" prefHeight="59.0" prefWidth="665.0" />
-            <Label layoutX="764.0" layoutY="80.0" text="Order Date">
+            <TextField layoutX="59.0" layoutY="112.0" prefHeight="59.0" prefWidth="665.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd" />
+            <Label layoutX="794.0" layoutY="80.0" text="Order Date">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="769.0" layoutY="110.0" prefHeight="59.0" prefWidth="665.0" />
-            <Label layoutX="37.0" layoutY="186.0" text="Staff">
+            <TextField layoutX="792.0" layoutY="110.0" prefHeight="59.0" prefWidth="665.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd" />
+            <Label layoutX="64.0" layoutY="186.0" text="Staff">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="42.0" layoutY="216.0" prefHeight="59.0" prefWidth="665.0" />
-            <Label layoutX="760.0" layoutY="186.0" text="Customer">
+            <TextField layoutX="61.0" layoutY="218.0" prefHeight="59.0" prefWidth="667.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd" />
+            <Label layoutX="794.0" layoutY="186.0" text="Customer">
                <font>
                   <Font name="Inter Bold" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="765.0" layoutY="216.0" prefHeight="59.0" prefWidth="665.0" />
-            <Label layoutX="25.0" layoutY="303.0" text="Items">
+            <TextField layoutX="792.0" layoutY="216.0" prefHeight="59.0" prefWidth="665.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="txtfd" />
+            <Label layoutX="59.0" layoutY="303.0" text="Items">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <TableView layoutX="24.0" layoutY="347.0" prefHeight="326.0" prefWidth="1405.0">
+            <TableView layoutX="58.0" layoutY="347.0" prefHeight="326.0" prefWidth="1405.0">
               <columns>
                 <TableColumn prefWidth="75.0" text="C1" />
                 <TableColumn prefWidth="75.0" text="C2" />
               </columns>
             </TableView>
-            <Label layoutX="18.0" layoutY="673.0" text="Total Price">
+            <Label layoutX="53.0" layoutY="673.0" text="Total Price">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Label layoutX="1185.0" layoutY="673.0" text="80.000VND">
+            <Label layoutX="1185.0" layoutY="673.0">
                <font>
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Button layoutX="1276.0" layoutY="750.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" text="Purchase">
+            <Button layoutX="1276.0" layoutY="750.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="152.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Purchase">
                <font>
-                  <Font name="Inter Bold" size="24.0" />
+                  <Font name="Inter Black" size="24.0" />
                </font>
             </Button>
-            <Button layoutX="1125.0" layoutY="750.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="119.0" text="Next">
+            <Button layoutX="1125.0" layoutY="750.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="119.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Save">
                <font>
-                  <Font name="Inter Bold" size="24.0" />
+                  <Font name="Inter Black" size="24.0" />
+               </font>
+            </Button>
+            <Button layoutX="51.0" layoutY="751.0" mnemonicParsing="false" onAction="#clickButtonBack3" prefHeight="54.0" prefWidth="119.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="Back">
+               <font>
+                  <Font name="Inter Black" size="24.0" />
                </font>
             </Button>
          </children>
@@ -277,10 +273,10 @@
                   <Font name="Inter Bold" size="36.0" />
                </font>
             </Label>
-            <Line endX="1092.0" endY="-7.62939453125E-6" layoutX="350.0" layoutY="37.0" startX="-35.999969482421875" startY="-7.62939453125E-6" />
+            <Line endX="850.2823486328125" endY="-1.52587890625E-5" layoutX="350.0" layoutY="37.0" startX="-35.999969482421875" startY="-7.62939453125E-6" strokeWidth="3.0" styleClass="line-color" />
             <ScrollPane layoutX="45.0" layoutY="72.0" prefHeight="765.0" prefWidth="1398.0">
                <content>
-                  <GridPane fx:id="GridPane" prefHeight="765.0" prefWidth="1389.0">
+                  <GridPane fx:id="GridPane" prefHeight="765.0" prefWidth="1389.0" styleClass="main-background">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -300,7 +296,15 @@
                   </GridPane>
                </content>
             </ScrollPane>
-            <Button fx:id="ButtonNextProduct" layoutX="291.0" layoutY="14.0" mnemonicParsing="false" text="NEXT" />
+            <Button fx:id="ButtonNextProduct" layoutX="1221.0" layoutY="10.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="97.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="NEXT">
+               <font>
+                  <Font name="Inter Black" size="20.0" />
+               </font></Button>
+            <Button fx:id="ButtonNextProduct1" layoutX="1344.0" layoutY="11.0" mnemonicParsing="false" onAction="#clickButtonBack2" prefHeight="51.0" prefWidth="97.0" style="-fx-background-radius: 15; -fx-border-radius: 15;" styleClass="main_btn" text="BACK">
+               <font>
+                  <Font name="Inter Black" size="20.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
    </children>
