--- a/src/main/resources/staff.css
+++ b/src/main/resources/staff.css
@@ -76,3 +76,15 @@
     -fx-background-radius: 10;
     -fx-background-insets: 0;
 }
+
+.txtfd{
+    -fx-border-color: #141E46;
+    -fx-border-width: 1px;
+}
+
+.spinner{
+    -fx-background-color: white;
+    -fx-text-fill: white;
+    -fx-border-width: 1px;
+    -fx-border-color: #141E46;
+}
